--- a/chapter9_exercise2.css
+++ b/chapter9_exercise2.css
@@ -65,3 +65,27 @@ footer {
   background-color: #aaaaaa;
   margin-top: 50px;
 }
+
+@media screen and (max-width: 768px) {
+main {
+    width: 100%;
+    display: block;
+    margin-top: 50px;
+  }
+}
+
+@media screen and (max-width: 768px) {
+.box {
+  width: 90%;
+  margin: 0px auto 20px auto;
+  padding: 10px;
+  }
+}
+
+@media screen and (max-width: 768px) {
+
+.box:last-child {
+  margin: 0px auto;
+  }
+}
+
