--- a/theme_1.css
+++ b/theme_1.css
@@ -15,77 +15,69 @@ main {
   display: flex;
 }
 
-.box {
-  background-color: #eeeeee;
+.step-box {
   width: 300px;
   margin-right: 30px;
   padding: 10px;
   position: relative;
+  background-color: #eee;
 }
 
-.box:last-child {
-  margin-right: 0px;
+.step-box:last-child {
+  margin-right: 0;
 }
 
-.box1-img {
+.step-img1 {
+  height: 150px;
   background-image: url(img/flow01.png);
   background-position: bottom;
   background-size: cover;
-  height: 150px;
 }
 
-.box2-img {
+.step-img2 {
+  height: 150px;
   background-image: url(img/flow02.png);
   background-position: bottom;
   background-size: cover;
-  height: 150px;
 }
 
-.box3-img {
+.step-img3 {
+  height: 150px;
   background-image: url(img/flow03.png);
   background-position: bottom;
   background-size: cover;
-  height: 150px;
 }
 
-.box-step {
-  background-color: #ff9a4b;
+.step-num {
   position: absolute;
   top: 0;
   left: 0;
-  color: white;
+  background-color: #ff9a4b;
+  color: #fff;
 }
 
-.box-title {
-  margin: 15px 0 5px 0;
+.title {
+  margin: 15px 0 5px;
 }
 
 footer {
   height: 50px;
-  background-color: #aaaaaa;
-  margin-top: 50px;
+  background-color: #aaa;
 }
 
 @media screen and (max-width: 768px) {
-main {
+  main {
     width: 100%;
     display: block;
-    margin-top: 50px;
+    margin: 50px auto 0 auto;
   }
-}
 
-@media screen and (max-width: 768px) {
-.box {
+.step-box {
   width: 90%;
   margin: 0px auto 20px auto;
-  padding: 10px;
   }
-}
 
-@media screen and (max-width: 768px) {
-
-.box:last-child {
+.step-box:last-child {
   margin: 0px auto;
   }
 }
-
