--- a/theme_1.css
+++ b/theme_1.css
@@ -69,7 +69,7 @@ footer {
   main {
     width: 100%;
     display: block;
-    margin: 50px auto 0 auto;
+    margin: 50px auto;
   }
 
 .step-box {
@@ -79,5 +79,17 @@ footer {
 
 .step-box:last-child {
   margin: 0px auto;
+  }
+
+.step-img1 {
+    background-position: 50% 85%;
+  }
+
+.step-img2 {
+    background-position: 50% 85%;
+  }
+
+.step-img3 {
+    background-position: 50% 85%;
   }
 }
